--- a/code/LED_Speaker/Makefile
+++ b/code/LED_Speaker/Makefile
@@ -2,5 +2,8 @@ CC = gcc
 CFLAGS = -Wall -Werror
 BLUEAPP = ../common/blueApp.c -lbluetooth
 
-main:
+gif:
+	gcc gif.c lcd_tft.c -lgif -lmraa -o test
+
+blue:
 	$(CC) $(BLUEAPP) main.c -o LED_Base
