--- a/code/LED_Speaker/Makefile
+++ b/code/LED_Speaker/Makefile
@@ -1,11 +1,17 @@
 CC = gcc
 CFLAGS = -Wall -Werror -c
 SHARED = -lpthread -lasound -lbluetooth -lmraa -lgif
+OBJ_SERVER = server/blueServer.o
 OBJ_AUDIO = audio/playback.o
 OBJ_DISPLAY = display/lcd_tft.o display/gif.o display/led.o
 
-main: audio display
-	$(CC) $(OBJ_AUDIO) $(OBJ_DISPLAY) main.c $(SHARED) -o LED_Speaker
+main: server audio display
+	$(CC) $(OBJ_SERVER) $(OBJ_AUDIO) $(OBJ_DISPLAY) main.c $(SHARED) -o LED_Speaker
+
+server: $(OBJ_SERVER)
+
+server/%.o: server/%.c
+	$(CC) $(CFLAGS) -lpthread -lbluetooth -o $@ $<
 
 audio: $(OBJ_AUDIO)
 
@@ -18,6 +24,7 @@ display/%.0: display/%.c
 	$(CC) $(CFLAGS) -lmraa -lgif -o $@ $<
 
 clean:
+	rm server/*.o
 	rm audio/*.o
 	rm display/*.o
 	rm LED_Speaker
