--- a/code/MIDI_Controller_Box/Makefile
+++ b/code/MIDI_Controller_Box/Makefile
@@ -1,6 +1,21 @@
 CC = gcc
-CFLAGS = -Wall -Werror
-BLUEAPP = ../common/blueApp.c -lbluetooth
+CFLAGS = -Wall -Werror -c
+SHARED = -lpthread -lbluetooth -lwiringPi
+OBJ_SERVER = server/blueServer.o server/util.o server/server.o server/websocket.o server/http.o server/sha1.o server/base64.o
 
-main:
-	$(CC) $(BLUEAPP) main.c -o MCB
+main: server
+	$(CC) $(OBJ_SERVER) main.c $(SHARED) -o MIDI_Controller
+
+server: $(OBJ_SERVER)
+
+server/%.o: server/%.c
+	$(CC) $(CFLAGS) -lpthread -lbluetooth -o $@ $<
+
+clean:
+	rm server/*.o
+	rm MIDI_Controller
+
+
+
+
+
