added spi class'

--- a/code/LED_Speaker/Makefile
+++ b/code/LED_Speaker/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -Werror -c
 SHARED = -lpthread -lasound -lbluetooth -lmraa -lgif -lm
 OBJ_SERVER = server/blueServer.o
 OBJ_AUDIO = audio/playback.o audio/tracks.o
-OBJ_DISPLAY = display/lcd_tft.o display/gif.o display/led.o
+OBJ_DISPLAY = display/lcd_tft.o display/gif.o display/led.o display/spi.o
 
 main: server audio display
 	$(CC) $(OBJ_SERVER) $(OBJ_AUDIO) $(OBJ_DISPLAY) main.c $(SHARED) -o LED_Speaker
